fix: load icon component from cdn and align with text

--- a/styles/components/icon.css
+++ b/styles/components/icon.css
@@ -1,25 +1,29 @@
 .slidev-layout .theme-icon {
   display: inline-block;
   flex-shrink: 0;
+  vertical-align: middle;
   background-color: currentColor;
-  -webkit-mask: var(--icon-url) center / contain no-repeat;
-  mask: var(--icon-url) center / contain no-repeat;
+  -webkit-mask-image: var(--icon-url);
+  mask-image: var(--icon-url);
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
 }
 
 .slidev-layout .theme-icon--sm {
-  width: var(--size-4);
-  height: var(--size-4);
-  vertical-align: -0.1em;
+  width: var(--text-sm);
+  height: var(--text-sm);
 }
 
 .slidev-layout .theme-icon--md {
-  width: var(--size-5);
-  height: var(--size-5);
-  vertical-align: -0.15em;
+  width: var(--text-base);
+  height: var(--text-base);
 }
 
 .slidev-layout .theme-icon--lg {
-  width: var(--size-6);
-  height: var(--size-6);
-  vertical-align: -0.2em;
+  width: var(--text-xl);
+  height: var(--text-xl);
 }
